<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="#33b5e5" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingRight="5dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_picker_dialog_title" />
    <View android:background="#33b5e5" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x201" />
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <NumberPicker android:textSize="12sp" android:id="@id/hour" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:layout_weight="0.2" android:contentDescription="@string/accessibility_time_picker_hour" />
        <TextView android:textSize="12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_picker_dialog_hour_minute_separator" />
        <NumberPicker android:textSize="12sp" android:id="@id/minute" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:layout_weight="0.2" android:contentDescription="@string/accessibility_time_picker_minute" />
        <TextView android:textSize="12sp" android:id="@id/second_colon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_picker_dialog_minute_second_separator" />
        <NumberPicker android:textSize="12sp" android:id="@id/second" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:layout_weight="0.2" android:contentDescription="@string/accessibility_time_picker_second" />
        <TextView android:textSize="12sp" android:id="@id/second_dot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_picker_dialog_second_subsecond_separator" />
        <NumberPicker android:textSize="12sp" android:id="@id/milli" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:layout_weight="0.2" android:contentDescription="@string/accessibility_time_picker_milli" />
        <NumberPicker android:textSize="12sp" android:id="@id/ampm" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:layout_weight="0.2" android:contentDescription="@string/accessibility_time_picker_ampm" />
    </LinearLayout>
</LinearLayout>
